--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>123</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script defer src="js/script.js"></script>
+<script defer src="script.js"></script>
 </head>
 <body>
 
@@ -28,7 +28,6 @@
         </div>
       </nav>
 
-<p>hej</p>
 
 
 
@@ -70,8 +69,32 @@
 
 
 
-
-
+<div class="container">
+    <div class="row">
+        <div class="col-12 center">
+            <h2>Om utbildningen</h2>
+        </div>
+    </div>
+    <div class="row m-2">
+        <div class="col-md-6 text-md-left">
+            <h3 class="center">Det här lär du dig!</h3>
+            <p>Som programutvecklare blir du expert på digital kommunikation. Genom teoretiska studier, praktiska övningar och eventuella beställningsarbeten lär du dig använda datorns olika funktioner och arbetar med många varierande program. Hos oss lär du dig programmera, bygga nätverk och hemsidor samt att betjäna kunder på ett professionellt sätt. <br> I utbildningen satsar vi på webbdesign och programmering inom Javascript och PHP. Vi utbildar mångsidiga webbutvecklare som klara såväl design och hemsideutveckling som programmering.  </p>
+        </div>
+        <div class="col-md-6 text-md-left">
+            <h3 class="center">Så här studerar du</h3>
+            <p>Studierna består av närstudier på Bangatan 75 i våra ändamålsenliga datasalar där du lär dig bland annat programmering inom Javascript och PHP, webbdesign och hemsideutveckling.<br>En del av studierna är inlärningsperioder på olika arbetsplatser (utbildning enligt utbildningsavtal, UA). Perioderna ute i arbetslivet ger dig viktiga kontakter till arbetsmöjligheter. <br>I grundutbildningen ingår också gemensamma examensdelar såsom finska, engelska, modersmål, matematik, etc. </p>
+        </div>
+</div>
+<div class="row m-2">
+    <div class="col-md-6 text-md-left">
+        <h3 class="center">Vad kan jag göra efter studierna?</h3>
+        <p>En programutvecklarexamen leder till goda möjligheter i arbetslivet eller till fortsatta studier på högskolor och universitet! <br>Efter studierna har du kunskap som behövs inom den moderna företagsvärlden inom till exempel e-handel, webbmarknadsföring eller datastöd och -service. </p>
+    </div>
+    <div class="col-md-6">
+        <img src="progutbildningimg1.jpg" alt="programutvecklare" class="img-fluid testimg">
+    </div>
+</div>
+</div>
 
 
 
